에디터 포기하고 쉽게 가는 버

--- a/WebContent/css/Team_FreeBoard.css
+++ b/WebContent/css/Team_FreeBoard.css
@@ -7,8 +7,9 @@
   font-style: normal;
 }
 html > body {
-  margin: 0;
+  margin-left: 100px;
   font-family: SeoulNamsanM, sans-serif;
+  width: 80%;
 }
 /* 스크롤바 설정*/
 .Contents-Box::-webkit-scrollbar {
@@ -26,9 +27,10 @@ html > body {
 }
 /*스타일 시작*/
 .Contents-Box {
+	
   height: calc(100% - 70px);
   color: #010101;
-  padding: 0 20px;
+  padding: 100px 20px;
 }
 /*제목, 삭제버튼*/
 .Contents-Box > .Title-And-Del {
@@ -42,7 +44,8 @@ html > body {
 }
 .Contents-Box > .Title-And-Del > .Title > span {
   margin-right: -5%;
-  font-size: 2rem;
+  font-size: 4rem;
+  padding-bottom: 1.5rem;
 }
 .Contents-Box > .Title-And-Del > .Sel-And-Del-Btn {
   width: 50%;
@@ -70,6 +73,9 @@ html > body {
   background-color: #4F6884;
 }
 /*목록*/
+.List-Box{
+	width:100%;
+}
 .Contents-Box > .List-Box > ul {
   display: flex;
   height: calc(100% / 15);
